--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--<link href="content/bootstrap/bootstrap-theme.css" rel="stylesheet">-->
     <link href="content/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="content/ace/ace.min.css" rel="stylesheet" id="main-ace-style">
-    <link href="content/animate/animate.css" rel="stylesheet">
+    <!--<link href="content/animate/animate.css" rel="stylesheet">-->
     <link href="content/ng-animate/ng-animation.css" rel="stylesheet">
 
 </head>
