--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
-    <title>ace 后台管理系统</title>
+    <title>后台管理系统</title>
     <link href="content/bootstrap/bootstrap.css" rel="stylesheet">
     <!--<link href="content/bootstrap/bootstrap-theme.css" rel="stylesheet">-->
     <link href="content/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
