添加了 growl和http拦截器

--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
     <link href="content/ace/ace.min.css" rel="stylesheet" id="main-ace-style">
     <!--<link href="content/animate/animate.css" rel="stylesheet">-->
     <link href="content/ng-animate/ng-animation.css" rel="stylesheet">
+    <link href="content/ng-growl/growl.css" rel="stylesheet">
+    <link href="content/ng-loadingbar/loadingbar.css" rel="stylesheet">
 
 </head>
 <body>
 
 <div ui-view></div>
-
+<div growl></div>
 <script src="javascript/libs/requirejs/require.js" data-main="javascript/main.js"></script>
 
 </body>
