特效优化，移动端的适配

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body ng-class="$root.bodyCls">
 
 <!--主容器-->
-<div ui-view class="slide-left my-rotate-in"></div>
+<div ui-view class="slide-left none-leave"></div>
 <!--消息提示-->
 <div growl></div>
 <!--js加载-->
