--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
 
     <title>后台管理系统</title>
     <link href="content/bootstrap/bootstrap.css" rel="stylesheet">
-    <!--<link href="content/bootstrap/bootstrap-theme.css" rel="stylesheet">-->
+    <link href="content/bootstrap/bootstrap-theme.css" rel="stylesheet">
     <link href="content/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="content/ace/ace.min.css" rel="stylesheet" id="main-ace-style">
-    <!--<link href="content/animate/animate.css" rel="stylesheet">-->
     <link href="content/ng-animate/ng-animation.css" rel="stylesheet">
     <link href="content/ng-growl/growl.css" rel="stylesheet">
     <link href="content/ng-loadingbar/loadingbar.css" rel="stylesheet">
