--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="content/ng-animate/ng-animation.css" rel="stylesheet">
     <link href="content/ng-growl/growl.css" rel="stylesheet">
     <link href="content/ng-loadingbar/loadingbar.css" rel="stylesheet">
+    <link href="content/ng-vbutton/vbutton.css" rel="stylesheet">
 
 </head>
 <body ng-class="$root.bodyCls">
