--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-
     <title>后台管理系统</title>
+
     <link href="content/bootstrap/bootstrap.css" rel="stylesheet">
     <link href="content/bootstrap/bootstrap-theme.css" rel="stylesheet">
     <link href="content/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
@@ -13,6 +13,7 @@
     <link href="content/ng-growl/growl.css" rel="stylesheet">
     <link href="content/ng-loadingbar/loadingbar.css" rel="stylesheet">
     <link href="content/ng-vbutton/vbutton.css" rel="stylesheet">
+    <link href="content/ng-grid/ui-grid.css" rel="stylesheet">
 
 </head>
 <body ng-class="$root.bodyCls">
