--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href="content/ng-grid/ui-grid.css" rel="stylesheet">
 
 </head>
-<body ng-class="$root.bodyCls">
+<body ng-class="$root.bodyCls" authorize>
 
 <!--主容器-->
 <div ui-view class="slide-left none-leave"></div>
