--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <link href="content/ng-loadingbar/loadingbar.css" rel="stylesheet">
     <link href="content/ng-vbutton/vbutton.css" rel="stylesheet">
     <link href="content/ng-grid/ui-grid.css" rel="stylesheet">
+    <link href="content/ng-pageloading/angular-pageloading.css" rel="stylesheet">
 
 </head>
-<body ng-class="$root.bodyCls" >
+<body ng-class="$root.bodyCls" authorize>
 
 <!--主容器-->
 <div ui-view class="slide-left none-leave"></div>
